# tam-sang

./: .gitignore  DAY7_RUNBOOK.txt  Makefile  README.md  build-all.bat  core_mock_requests.json  docker-compose.service.yml  docker-compose.yml  down.sh  endpoint.md  generate_mock_requests.js  open.bat  read_docx.py  start.bat  stop.bat  ttnt2026.docx  up.sh  ý tưởng đồ án tốt nghiệp.docx
ai-service/: .dockerignore  .gitignore  =2.7  Dockerfile  README.md  SETUP.md  pyproject.toml
ai-service/app/: config.py  main.py
ai-service/app/kafka/: consumer.py  proof_handler.py
ai-service/app/models/: events.py  face_verification_events.py  hybrid_events.py  proof_events.py
ai-service/app/services/: bill_validator.py  clip_service.py  face_verification.py  hybrid_reasoning.py  image_forensics.py  llm_reasoning.py  ocr_service.py  proof_rubric.py  vector_db.py
ai-service/app/utils/: callback_utils.py  image_utils.py
ai-service/scripts/: evaluate_proof_rubric.py
ai-service/tests/: test_bill_flow.py  test_callback_payload.py  test_proof_rubric_regression.py
ai-service/tests/data/: proof_rubric_cases.json  proof_rubric_overrides.example.json
api-gateway/: .dockerignore  ADDING_SERVICES.md  Dockerfile  pom.xml
blockchain-service/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum
config-server/: Dockerfile  pom.xml
core-service/: Dockerfile  pom.xml
discovery-server/: Dockerfile  pom.xml
file-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
identity-service/: .dockerignore  Dockerfile  pom.xml  (+1 more)
(+370 files in other folders)
